패키지 이동

--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -27,7 +27,7 @@
             </div>
         </form>
         <div class="text-center">
-            <p>아직 계정이 없나요? <a href="/users/signup">회원가입</a></p>
+            <p>아직 계정이 없나요? <a href="/templates/users/signup">회원가입</a></p>
         </div>
     </div>
 </div>
