--- a/src/main/resources/templates/users/signUp.html
+++ b/src/main/resources/templates/users/signUp.html
@@ -40,7 +40,7 @@
             </div>
         </form>
         <div class="text-center">
-            <p>이미 계정이 있나요? <a href="/users/login">로그인</a></p>
+            <p>이미 계정이 있나요? <a href="/templates/users/login">로그인</a></p>
         </div>
     </div>
 </div>
