--- a/src/main/resources/templates/users/signUp.html
+++ b/src/main/resources/templates/users/signUp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원가입</title>
-    <link rel="stylesheet" href="/css/signUp.css">
+    <link rel="stylesheet" href="/css/users/signUp.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -40,11 +40,11 @@
             </div>
         </form>
         <div class="text-center">
-            <p>이미 계정이 있나요? <a href="/templates/users/login">로그인</a></p>
+            <p>이미 계정이 있나요? <a href="/users/login">로그인</a></p>
         </div>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/js/signup.js"></script>
+<script src="/js/users/signUp.js"></script>
 </body>
 </html>
