--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>로그인</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/users/login.css">
 </head>
 <body>
 <div class="container">
@@ -27,11 +27,11 @@
             </div>
         </form>
         <div class="text-center">
-            <p>아직 계정이 없나요? <a href="/templates/users/signup">회원가입</a></p>
+            <p>아직 계정이 없나요? <a href="/users/signup">회원가입</a></p>
         </div>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/js/login.js"></script>
+<script src="/js/users/login.js"></script>
 </body>
 </html>
