잘못된 경로 수정

--- a/src/main/resources/templates/product/product_add.html
+++ b/src/main/resources/templates/product/product_add.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>상품 등록</title>
-    <link rel="stylesheet" href="/css/product/product.css">
+    <link rel="stylesheet" href="/css/product/product_add.css">
 </head>
 <body>
 <div class="container">
@@ -47,6 +47,6 @@
         </form>
     </div>
 </div>
-<script src="/js/product/product.js"></script>
+<script src="/js/product/product_add.js"></script>
 </body>
 </html>
