--- a/src/main/resources/templates/product/product_detail.html
+++ b/src/main/resources/templates/product/product_detail.html
@@ -25,7 +25,7 @@
             구매하기
         </button>
         <!-- 장바구니 담기 버튼 -->
-        <button class="w-full sm:w-64 bg-green-500 text-white py-3 rounded-md hover:bg-green-600">
+        <button id="addToCart" class="w-full sm:w-64 bg-green-500 text-white py-3 rounded-md hover:bg-green-600">
             장바구니 담기
         </button>
     </div>
@@ -35,5 +35,6 @@
         <a href="/products" class="text-blue-500 hover:underline">상품 목록으로 돌아가기</a>
     </div>
 </div>
+<script src="/js/product/product_detail.js"></script>
 </body>
 </html>
