--- a/src/main/resources/templates/product/product_list.html
+++ b/src/main/resources/templates/product/product_list.html
@@ -6,7 +6,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
 </head>
 <body class="p-6 max-w-6xl mx-auto bg-gray-100">
+<!-- 장바구니 목록 버튼 -->
+<div class="mb-6 text-right">
+    <button id="cartButton" class="bg-green-500 text-white py-2 px-6 rounded-lg hover:bg-green-600 transition duration-300">
+        장바구니 목록
+    </button>
+</div>
+
 <h1 class="text-3xl font-bold text-center mb-6 text-gray-800">🛍️ 상품 목록</h1>
+
 <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
     <div th:each="product : ${products}"
          class="bg-white border p-4 rounded-lg shadow-lg transition-transform transform hover:scale-105">
@@ -21,10 +29,6 @@
         <button class="mt-3 w-full bg-blue-500 text-white py-2 rounded-md hover:bg-blue-600">구매하기</button>
     </div>
 </div>
-
-<script>
-
-</script>
-
+<script src="/js/product/product_list.js"></script>
 </body>
 </html>
